--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -3,9 +3,9 @@
 body {
   min-height: 100%;
   background-color: $bg-white;
-  color: $main-black;
-  font-size: $fs-base;
-  line-height: $lh-base;
+  color: $font-grey-dark;
+  font-size: $fs-default;
+  line-height: $lh-default;
   font-family: $font-family;
 }
 
