--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,4 +2,12 @@
 @import "fonts.scss";
 @import "variables.scss";
 @import "global.scss";
-
+@import "./blocks/app.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/header.scss";
+@import "./blocks/info.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/main.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/summary.scss";
