--- a/src/sass/blocks/main.scss
+++ b/src/sass/blocks/main.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-areas:
     "slider summary"
-    "info .";
+    "info info";
   align-items: flex-start;
   grid-template-columns: 1fr 1fr;
   column-gap: 57px;
