--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,11 +3,17 @@
 @import "variables.scss";
 @import "global.scss";
 @import "./blocks/app.scss";
+@import "./blocks/contacts.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/header.scss";
 @import "./blocks/info.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/main.scss";
 @import "./blocks/nav.scss";
+@import "./blocks/popup.scss";
+@import "./blocks/review.scss";
+@import "./blocks/reviews.scss";
 @import "./blocks/slider.scss";
+@import "./blocks/specs.scss";
+@import "./blocks/stars.scss";
 @import "./blocks/summary.scss";
