--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -13,6 +13,9 @@ $font-white: #ffffff;
 $font-red: #d12136;
 
 $decor-grey: #d7d9df;
+$star-default: rgba(189, 190, 194, 0.7);
+$star-red: #d12136;
+$border-grey: rgba(0, 0, 0, 0.2);
 
 // Fonts
 
