--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -16,6 +16,7 @@ $decor-grey: #d7d9df;
 $star-default: rgba(189, 190, 194, 0.7);
 $star-red: #d12136;
 $border-grey: rgba(0, 0, 0, 0.2);
+$cross-grey: #9f9e9e;
 
 // Fonts
 
