--- a/src/sass/blocks/main.scss
+++ b/src/sass/blocks/main.scss
@@ -14,6 +14,7 @@
 
 .main__slider {
   grid-area: slider;
+  padding-left: 20px;
 }
 
 .main__summary {
@@ -22,4 +23,5 @@
 
 .main__info {
   grid-area: info;
+  padding-left: 20px;
 }
