--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -7,17 +7,12 @@
 
 .footer__list {
   max-width: $max-width;
+  width: 100%;
   padding: 0;
   margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.footer__item {
-  &:not(:last-of-type) {
-    margin-right: 66px;
-  }
 }
 
 .footer__link {
