--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -13,6 +13,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
+
+  padding-left: 20px;
 }
 
 .footer__link {
